# my_arm

./: README.md
aarm/: CMakeLists.txt  package.xml
aarm/config/: controllers.yaml
aarm/launch/: aarm_controller.launch.py  aarm_display.launch.xml  aarm_gazebo.launch.py
aarm/meshes/: base_link.STL  end_effector.STL  gripper_base.STL  gripper_camera.STL  left_gripper_arm.STL  left_tip.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  right_gripper_arm.STL  right_tip.STL
aarm/rviz/: config.rviz
aarm/urdf/: aarm.urdf.xacro  aarm_base.xacro  aarm_gazebo.xacro  aarm_ros2_control.xacro
aarm_moveit/: CMakeLists.txt  package.xml
aarm_moveit/config/: aarm.ros2_control.xacro  aarm.srdf  aarm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
aarm_moveit/launch/: aarm_moveit.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arm/: CMakeLists.txt  package.xml
arm/config/: controllers.yaml  full_robot_arm_sim.launch  joint_trajectory_controller.yaml  new_ros_controllers.yaml
arm/launch/: controller.launch.py  display.launch.xml  gazebo.launch.py  robot.launch.py
arm/urdf/: arm.urdf  arm.urdf.xacro  arm_base.xacro  arm_gazebo.xacro  arm_ros2_control.xacro  main.urdf
